Misc: fix fldview, deploy from git, fix overflow (#1133)
* fix fld view opts crash

* upgrade from git

* restart with workers

* delay

* different soln for overflow hiding

* root pkg lock

--- a/packages/server/public/saltcorn.css
+++ b/packages/server/public/saltcorn.css
@@ -224,7 +224,6 @@ footer.bs-mobile-nav-footer {
 .form-group {
   margin-bottom: 1rem;
 }
-
-.table-responsive {
-  overflow: visible;
+div.dropdown-menu {
+  position: absolute;
 }
